--- a/AwesomeBooks/src/app/books.component.html
+++ b/AwesomeBooks/src/app/books.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <div *ngFor="let book of book_list">
+            <div *ngFor="let book of book_list | async">
                 <div class="card mb-3"                
                     [routerLink]="['/books', book._id]"
                     style="width: 40rem; margin: auto; display: flex; cursor: pointer;">
@@ -20,4 +20,20 @@
             </div>
         </div>  <!-- col -->
     </div>      <!-- row -->
+
+    <div class="row">
+        <div class="col-sm-6">
+            <button class="btn btn-primary"
+                (click)="previousPage()">
+                Previous
+            </button>
+        </div>
+        <div class="col-sm-6 text-end">
+            <button class="btn btn-primary"
+                (click)="nextPage()">
+                Next
+            </button>
+        </div>
+    </div>
+    
 </div>          <!-- container -->
