end of D4 exercises

--- a/AwesomeBooks/src/app/book.component.html
+++ b/AwesomeBooks/src/app/book.component.html
@@ -1,19 +1,19 @@
 <!-- TODO: create a grid layout? This one does not work -->
 <div class="container">
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-12">
             <div *ngFor = "let book of book | async"> 
-                <div class="card text-white bg-secondary mb-3" style="width: 18rem; margin: auto; display: flex;">
+                <div class="card text-white bg-secondary mb-3" style="width: 30rem; margin: auto; display: flex;">
                     <div class="card-header bg-success">
                         <h2 class="card-title">{{book.title}}</h2>
                     </div>
                     <div class="card-body">
                         <p class="card-text">Written by {{book.author}}</p>
-                        <div *ngFor="let review of book.reviews">
+                        <!-- <div *ngFor="let review of book.reviews">
                             <p>{{review.name}} said:</p>
                             <p>{{review.comment}}</p>
                             <p>Rating: {{review.stars}}</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="card-footer">
                     </div>
@@ -22,3 +22,65 @@
         </div>  <!-- col -->
     </div>      <!-- row -->
 </div>          <!-- container -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card bg-light mb-3"
+                style="width: 30rem; margin: auto;"
+                *ngFor="let review of reviews | async">
+                <div class="card-header">
+                    Review by 
+                    {{review.name}}
+                    <!-- on {{review.date.substr(0, 10) | date}} -->
+                </div>
+                <div class="card-body">
+                    {{review.comment}}
+                </div>
+                <div class="card-footer">
+                    {{review.stars}} stars
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h2>What did you think of this book?</h2>
+            <p>Please leave your review below.</p>
+            <form [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" 
+                        class="form-control" 
+                        formControlName="name"
+                        [ngClass]="{ 'error' : isInvalid('name')}">
+                </div>
+                <div class="form-group">
+                    <label for="review">Please leave your review below</label>
+                    <textarea name="review" id="review" rows="3" 
+                        class="form-control"
+                        formControlName="review"
+                        [ngClass]="{ 'error' : isInvalid('review')}"
+                    ></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="stars">Please provide a rating (5 = best)</label>
+                    <select name="stars" id="stars" 
+                        class="form-control" formControlName="stars">
+                        <option value="1">1 star</option>
+                        <option value="2">2 stars</option>
+                        <option value="3">3 stars</option>
+                        <option value="4">4 stars</option>
+                        <option value="5">5 stars</option>
+                    </select>
+                </div>
+                <span *ngIf="isIncomplete()" class="error">You must complete all fields</span>
+                <button *ngIf="!isIncomplete()" type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>  
+    </div>      
+</div>          
