end of practicat D5

--- a/AwesomeBooks/src/app/home.component.html
+++ b/AwesomeBooks/src/app/home.component.html
@@ -1,1 +1,21 @@
-<h1>Biz Directory</h1>
+<h1>Awesome Books</h1>
+
+<!-- <ng-container
+    *ngIf = "authService.isAuthenticated$ | async;
+    else loggedOut">
+    <button class="btn btn-primary"
+            (click) = "authService.logout()">Logout</button>
+</ng-container>
+
+<ng-template #loggedOut>
+    <button class="btn btn-primary"
+            (click) = "authService.loginWithRedirect()">
+        Login</button>
+</ng-template>
+
+<hr>
+<h4>Current user</h4>
+<ul *ngIf = "authService.user$ | async as user">
+    <li>Name: {{ user.name }}</li>
+    <li>Email: {{ user.email }}</li>
+</ul> -->
