--- a/AwesomeBooks/src/app/book.component.html
+++ b/AwesomeBooks/src/app/book.component.html
@@ -1,5 +1,5 @@
 <!-- TODO: create a grid layout? This one does not work -->
-<div class="container">
+<div class="container" style="margin-top:70px;">
     <div class="row">
         <div class="col-sm-12">
             <div *ngFor = "let book of book | async"> 
