--- a/AwesomeBooks/src/app/home.component.html
+++ b/AwesomeBooks/src/app/home.component.html
@@ -1,21 +1,14 @@
-<h1>Awesome Books</h1>
+<h1 style="padding-top: 70px;">Welcome to Awesome Books!</h1>
+<img [src]="imagePath" />
 
-<!-- <ng-container
+<ng-container
     *ngIf = "authService.isAuthenticated$ | async;
     else loggedOut">
-    <button class="btn btn-primary"
-            (click) = "authService.logout()">Logout</button>
+    <div *ngIf = "authService.user$ | async as user">
+        Good to see you back, {{ user.name }} :) 
+    </div>
 </ng-container>
 
 <ng-template #loggedOut>
-    <button class="btn btn-primary"
-            (click) = "authService.loginWithRedirect()">
-        Login</button>
+    Don't forget to login for a better experience
 </ng-template>
-
-<hr>
-<h4>Current user</h4>
-<ul *ngIf = "authService.user$ | async as user">
-    <li>Name: {{ user.name }}</li>
-    <li>Email: {{ user.email }}</li>
-</ul> -->
