--- a/AwesomeBooks/src/app/nav.component.html
+++ b/AwesomeBooks/src/app/nav.component.html
@@ -1,7 +1,8 @@
 <div class="navbar navbar-expand-sm bg-primary
             navbar-dark fixed-top">
             
-    <span class="navbar-brand">Awesome Books</span>
+    <!-- <span class="navbar-brand">Awesome Books</span> -->
+    <img [src]="imagePath" height="40" style="padding: 0 10px;" />
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" routerLink='/'>Home</a>
