adding some css

--- a/AwesomeBooks/src/app/book.component.css
+++ b/AwesomeBooks/src/app/book.component.css
@@ -1,3 +1,11 @@
 .error {
   background-color: #fff0f0;
 }
+
+.card-header {
+  background-color: #f5cac3;
+}
+
+.card-subtitle {
+  font-size: 1.2rem;
+}
