--- a/AwesomeBooks/src/app/book.component.html
+++ b/AwesomeBooks/src/app/book.component.html
@@ -3,12 +3,13 @@
     <div class="row">
         <div class="col-sm-12">
             <div *ngFor = "let book of book | async"> 
-                <div class="card text-white bg-secondary mb-3" style="width: 30rem; margin: auto; display: flex;">
-                    <div class="card-header bg-success">
+                <div class="card mb-3" style="width: 40rem; margin: auto; display: flex;">
+                    <div class="card-header">
                         <h2 class="card-title">{{book.title}}</h2>
+                        <h3 class="card-subtitle mb-2 text-muted">Written by {{book.author}}</h3>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">Written by {{book.author}}</p>
+                        <p class="card-text">Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat tbh semiotics artisan synth stumptown gastropub cornhole celiac swag. Brunch raclette vexillologist post-ironic glossier ennui XOXO mlkshk godard pour-over blog tumblr humblebrag. Blue bottle put a bird on it twee prism biodiesel brooklyn. Blue bottle ennui tbh succulents.</p>
                         <!-- <div *ngFor="let review of book.reviews">
                             <p>{{review.name}} said:</p>
                             <p>{{review.comment}}</p>
@@ -16,6 +17,7 @@
                         </div> -->
                     </div>
                     <div class="card-footer">
+                        <a href="https://loremipsum.io/ultimate-list-of-lorem-ipsum-generators/">-> Hipster Ipsum source</a>
                     </div>
                 </div>
             </div>
@@ -29,7 +31,7 @@
             <div class="card bg-light mb-3"
                 style="width: 30rem; margin: auto;"
                 *ngFor="let review of reviews | async">
-                <div class="card-header">
+                <div class="card-header bg-secondary text-white">
                     Review by 
                     {{review.name}}
                     <!-- on {{review.date.substr(0, 10) | date}} -->
@@ -38,7 +40,7 @@
                     {{review.comment}}
                 </div>
                 <div class="card-footer">
-                    {{review.stars}} stars
+                    <strong>Rating:</strong> {{review.stars}} stars
                 </div>
             </div>
         </div>
