--- a/AwesomeBooks/src/app/nav.component.html
+++ b/AwesomeBooks/src/app/nav.component.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm bg-primary
+<div class="navbar navbar-expand-sm
             navbar-dark fixed-top">
             
     <!-- <span class="navbar-brand">Awesome Books</span> -->
