centering home page

--- a/AwesomeBooks/src/app/app.component.html
+++ b/AwesomeBooks/src/app/app.component.html
@@ -1,2 +1,4 @@
-<navigation></navigation>
-<router-outlet></router-outlet>
+<div class="app-wrapper">
+    <navigation></navigation>
+    <router-outlet></router-outlet>
+</div>
