--- a/AwesomeBooks/src/app/book.component.html
+++ b/AwesomeBooks/src/app/book.component.html
@@ -10,7 +10,7 @@
                             <h3 class="card-subtitle mb-2 text-muted">Written by {{book.author}}</h3>
                         </div>
                         <div>
-                            <button class="btn btn-secondary edit-button" data-toggle="modal" data-target="#exampleModal">
+                            <button class="btn btn-secondary edit-button" data-toggle="modal" data-target="#editBookModal">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
                                     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
                                 </svg>
@@ -118,57 +118,83 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="editBookModal" tabindex="-1" role="dialog" aria-labelledby="editBookModalLabel" aria-hidden="true">
 <div class="modal-dialog" role="document">
     <div class="modal-content">
     <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="editBookModalLabel">Edit book</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
-        <form [formGroup]="editBookForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="editBookForm" (ngSubmit)="onBookEditSubmit()">
             <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" 
+                <label for="title">Title</label>
+                <input type="text" id="title" name="title" 
                     class="form-control" 
-                    formControlName="name"
-                    >
+                    formControlName="title" required>
             </div>
             <div class="form-group">
-                <label for="review">Please leave your review below</label>
-                <textarea name="review" id="review" rows="3" 
-                    class="form-control"
-                    formControlName="review"
-                ></textarea>
+                <label for="author">Author</label>
+                <input type="text" id="author" name="author" 
+                    class="form-control" 
+                    formControlName="author" required>
+            </div>
+             <div class="form-group">
+                <label for="country">Country</label>
+                <input type="text" id="country" name="country" 
+                    class="form-control" 
+                    formControlName="country" required>
             </div>
             <div class="form-group">
-                <label for="stars">Please provide a rating (5 = best)</label>
-                <select name="stars" id="stars" 
-                    class="form-control" formControlName="stars">
-                    <option value="1">1 star</option>
-                    <option value="2">2 stars</option>
-                    <option value="3">3 stars</option>
-                    <option value="4">4 stars</option>
-                    <option value="5">5 stars</option>
-                </select>
+                <label for="imageLink">Image Link</label>
+                <input type="text" id="imageLink" name="imageLink" 
+                    class="form-control" 
+                    formControlName="imageLink" required>
             </div>
+            <div class="form-group">
+                <label for="language">Language</label>
+                <input type="text" id="language" name="language" 
+                    class="form-control" 
+                    formControlName="language" required>
+            </div>
+            <div class="form-group">
+                <label for="link">Link</label>
+                <input type="text" id="link" name="link" 
+                    class="form-control" 
+                    formControlName="link" required>
+            </div>
+            <div class="form-group">
+                <label for="pages">Pages</label>
+                <input type="number" id="pages" name="pages" 
+                    class="form-control" 
+                    formControlName="pages" required>
+            </div>
+            <div class="form-group">
+                <label for="year">Year</label>
+                <input type="number" id="year" name="year" 
+                    class="form-control" 
+                    formControlName="year" required>
+            </div>
+
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-primary">Save changes</button>
             <!-- <span *ngIf="isIncomplete()" class="error">You must complete all fields</span>
             <button *ngIf="!isIncomplete()" type="submit" class="btn btn-primary">Submit</button> -->
         </form>
     </div>
-    <div class="modal-footer">
+    <!-- <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-    </div>
+        <button type="submit" class="btn btn-primary">Save changes</button>
+    </div> -->
     </div>
 </div>
 </div>
 
 <!-- Modal Script -->
-<script>
-$('#myModal').on('shown.bs.modal', function () {
-$('#myInput').trigger('focus')
-})
-</script>
+<!-- <script>
+    $('#editBookModal').on('shown.bs.modal', function () {
+        $('#title').trigger('focus')
+    })
+</script> -->
