--- a/AwesomeBooks/src/app/books.component.html
+++ b/AwesomeBooks/src/app/books.component.html
@@ -40,3 +40,64 @@
     </div>
     
 </div>          <!-- container -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h2>Add a new book</h2>
+            <form [formGroup]="addBookForm" (ngSubmit)="onBookAddSubmit()">
+                <div class="form-group">
+                    <label for="title">Title</label>
+                    <input type="text" id="title" name="title" 
+                        class="form-control" 
+                        formControlName="title" required>
+                </div>
+                <div class="form-group">
+                    <label for="author">Author</label>
+                    <input type="text" id="author" name="author" 
+                        class="form-control" 
+                        formControlName="author" required>
+                </div>
+                 <div class="form-group">
+                    <label for="country">Country</label>
+                    <input type="text" id="country" name="country" 
+                        class="form-control" 
+                        formControlName="country" required>
+                </div>
+                <div class="form-group">
+                    <label for="imageLink">Image Link</label>
+                    <input type="text" id="imageLink" name="imageLink" 
+                        class="form-control" 
+                        formControlName="imageLink" required>
+                </div>
+                <div class="form-group">
+                    <label for="language">Language</label>
+                    <input type="text" id="language" name="language" 
+                        class="form-control" 
+                        formControlName="language" required>
+                </div>
+                <div class="form-group">
+                    <label for="link">Link</label>
+                    <input type="text" id="link" name="link" 
+                        class="form-control" 
+                        formControlName="link" required>
+                </div>
+                <div class="form-group">
+                    <label for="pages">Pages</label>
+                    <input type="number" id="pages" name="pages" 
+                        class="form-control" 
+                        formControlName="pages" required>
+                </div>
+                <div class="form-group">
+                    <label for="year">Year</label>
+                    <input type="number" id="year" name="year" 
+                        class="form-control" 
+                        formControlName="year" required>
+                </div>
+    
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
+            </form>
+        </div>  
+    </div>      
+</div>
