--- a/AwesomeBooks/src/app/book.component.html
+++ b/AwesomeBooks/src/app/book.component.html
@@ -50,8 +50,8 @@
             <div *ngFor="let book of book | async">
                 <div *ngFor="let review of reviews | async">
                     <div class="card bg-light mb-3"
+                    [routerLink]="['/books', book._id, 'reviews', review._id]"
                     style="width: 40rem; margin: auto;">
-                    <!-- [routerLink]="['/books', book._id, 'reviews', review._id]" -->
                         <div class="card-header bg-secondary text-white">
                             Review by 
                             {{review.name}}
@@ -59,7 +59,7 @@
                         </div>
                         <div class="card-body">
                             <p class="comment">{{review.comment}}</p>
-                            <ng-container
+                            <!-- <ng-container
                                 *ngIf = "authService.isAuthenticated$ | async;">
                                 <div *ngIf = "authService.user$ | async as user">
                                     <button class="btn btn-secondary edit-button" data-toggle="modal" data-target="#editReviewModal">
@@ -77,7 +77,7 @@
                                         Delete
                                     </button>
                                 </div>
-                            </ng-container>
+                            </ng-container> -->
                         </div>
                         <div class="card-footer">
                             <strong>Rating:</strong> {{review.stars}} stars
@@ -214,56 +214,6 @@
     </div>
 </div>
 </div>
-
-<!-- Edit Review Modal -->
-
-<div class="modal fade" id="editReviewModal" tabindex="-1" role="dialog" aria-labelledby="editReviewModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-        <div class="modal-header">
-            <h5 class="modal-title" id="editReviewModalLabel">Edit book</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <div class="modal-body">
-            <form [formGroup]="editReviewForm" (ngSubmit)="onReviewEditSubmit()">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" 
-                        class="form-control" 
-                        formControlName="name"
-                        [ngClass]="{ 'error' : isInvalid('name')}">
-                </div>
-                <div class="form-group">
-                    <label for="review">Please leave your review below</label>
-                    <textarea name="review" id="review" rows="3" 
-                        class="form-control"
-                        formControlName="review"
-                        [ngClass]="{ 'error' : isInvalid('review')}"
-                    ></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="stars">Please provide a rating (5 = best)</label>
-                    <select name="stars" id="stars" 
-                        class="form-control" formControlName="stars">
-                        <option value="1">1 star</option>
-                        <option value="2">2 stars</option>
-                        <option value="3">3 stars</option>
-                        <option value="4">4 stars</option>
-                        <option value="5">5 stars</option>
-                    </select>
-                </div>
-                <!-- <span *ngIf="isIncomplete()" class="error">You must complete all fields</span>
-                <button *ngIf="!isIncomplete()" type="submit" class="btn btn-primary">Submit</button> -->
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Save changes</button>
-
-            </form>
-        </div>
-    </div>
-    </div>
-
 
 
 <!-- Modal Script -->
