--- a/AwesomeBooks/src/app/book.component.html
+++ b/AwesomeBooks/src/app/book.component.html
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top:70px;">
-    <div class="row">
-        <div class="col-sm-6">
+    <div class="row row-cols-auto">
+        <div class="col-md">
             <div *ngFor = "let book of book | async"> 
                 <div class="card mb-3" style="width: 40rem; margin: auto; display: flex;">
                     <div class="card-header">
@@ -40,12 +40,12 @@
             </div>
         </div>  <!-- col -->
 
-        <div class="col-sm-6">
-            <div style="display: flex; justify-content: space-between;">
-                <h3>Reviews:</h3>
+        <div class="col-md">
+            <div class="row">
+                <h3 class="col-sm-6  text-end">Reviews:</h3>
                 <ng-container
                     *ngIf = "authService.isAuthenticated$ | async; else loggedOut">
-                    <div *ngIf = "authService.user$ | async as user">
+                    <div *ngIf = "authService.user$ | async as user" class="col-sm-6">
                         <button class="btn btn-secondary add-button" data-toggle="modal" data-target="#addReviewModal">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
@@ -55,14 +55,14 @@
                     </div>
                 </ng-container>
                 <ng-template #loggedOut>
-                    <p>Please log in to leave a review.</p>
+                    <p class="col-sm-6">Please log in to leave a review.</p>
                 </ng-template>
             </div>
             <div *ngFor="let book of book | async">
-                <div *ngFor="let review of reviews | async">
+                <div class="row" *ngFor="let review of reviews | async">
                     <div class="card bg-light mb-3"
                     [routerLink]="['/books', book._id, 'reviews', review._id]"
-                    style="width: 40rem; margin: auto;">
+                    style="width: 40rem; margin: auto; padding: 0;">
                         <div class="card-header bg-secondary text-white">
                             Review by 
                             {{review.name}}
