--- a/AwesomeBooks/src/app/books.component.html
+++ b/AwesomeBooks/src/app/books.component.html
@@ -86,52 +86,61 @@
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" id="title" name="title" 
-                        class="form-control" 
+                        class="form-control"
+                        [ngClass]="{ 'error' : isBookInvalid('title')}" 
                         formControlName="title" required>
                 </div>
                 <div class="form-group">
                     <label for="author">Author</label>
                     <input type="text" id="author" name="author" 
-                        class="form-control" 
+                        class="form-control"
+                        [ngClass]="{ 'error' : isBookInvalid('author')}" 
                         formControlName="author" required>
                 </div>
                 <div class="form-group">
                     <label for="country">Country</label>
                     <input type="text" id="country" name="country" 
-                        class="form-control" 
+                        class="form-control"
+                        [ngClass]="{ 'error' : isBookInvalid('country')}" 
                         formControlName="country" required>
                 </div>
                 <div class="form-group">
                     <label for="imageLink">Image Link</label>
                     <input type="text" id="imageLink" name="imageLink" 
-                        class="form-control" 
+                        class="form-control"
+                        [ngClass]="{ 'error' : isBookInvalid('imageLink')}" 
                         formControlName="imageLink" required>
                 </div>
                 <div class="form-group">
                     <label for="language">Language</label>
                     <input type="text" id="language" name="language" 
-                        class="form-control" 
+                        class="form-control"
+                        [ngClass]="{ 'error' : isBookInvalid('language')}" 
                         formControlName="language" required>
                 </div>
                 <div class="form-group">
                     <label for="link">Link</label>
                     <input type="text" id="link" name="link" 
-                        class="form-control" 
+                        class="form-control"
+                        [ngClass]="{ 'error' : isBookInvalid('link')}" 
                         formControlName="link" required>
                 </div>
                 <div class="form-group">
                     <label for="pages">Pages</label>
                     <input type="number" id="pages" name="pages" 
-                        class="form-control" 
+                        class="form-control"
+                        [ngClass]="{ 'error' : isBookInvalid('pages')}" 
                         formControlName="pages" required>
                 </div>
                 <div class="form-group">
                     <label for="year">Year</label>
                     <input type="number" id="year" name="year" 
-                        class="form-control" 
+                        class="form-control"
+                        [ngClass]="{ 'error' : isBookInvalid('year')}" 
                         formControlName="year" required>
                 </div>
-                <button type="submit" class="btn btn-primary">Add book</button>
+                <span *ngIf="isBookIncomplete()" class="error">You must complete all fields</span>
+                <button *ngIf="!isBookIncomplete()" type="submit" class="btn btn-primary">Add book</button>
             </form> 
         </div>
         </div>
