images links working

--- a/AwesomeBooks/src/app/books.component.html
+++ b/AwesomeBooks/src/app/books.component.html
@@ -34,7 +34,7 @@
         <div class="col-md">
                 <div class="card mb-3"                
                     [routerLink]="['/books', book._id]"
-                    style="width: 25rem;  display: flex; cursor: pointer;">
+                    style="width: 25rem; display: flex; cursor: pointer;">
                     <div class="card-header">
                         <div>
                             <h2 class="card-title">{{book.title}}</h2>
@@ -43,15 +43,12 @@
 
                     </div>
                     <div class="card-body">
-                        <img src="https://raw.githubusercontent.com/benoitvallon/100-best-books/master/static/{{book.imageLink}}" height="200"/>
+                        <img src={{book.imageLink}} height="200"/>
                     </div>
-                    <!-- <div class="card-footer">
-                        
-                    </div> -->
                 </div>
             </div>
-        </div>  <!-- col -->
-    </div>      <!-- row -->
+        </div>
+    </div>
 </div>
 <div class="container">
     <div class="row">
@@ -68,81 +65,80 @@
             </button>
         </div>
     </div>
-    
-</div>          <!-- container -->
+</div>
 
 <!-- Add Book Modal -->
 <div class="modal fade" id="addBookModal" tabindex="-1" role="dialog" aria-labelledby="addBookModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-        <div class="modal-header">
-            <h5 class="modal-title" id="addBookModalLabel">Add new book</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <div class="modal-body">
-            <form [formGroup]="addBookForm" (ngSubmit)="onBookAddSubmit()">
-                <div class="form-group">
-                    <label for="title">Title</label>
-                    <input type="text" id="title" name="title" 
-                        class="form-control"
-                        [ngClass]="{ 'error' : isBookInvalid('title')}" 
-                        formControlName="title" required>
-                </div>
-                <div class="form-group">
-                    <label for="author">Author</label>
-                    <input type="text" id="author" name="author" 
-                        class="form-control"
-                        [ngClass]="{ 'error' : isBookInvalid('author')}" 
-                        formControlName="author" required>
-                </div>
-                <div class="form-group">
-                    <label for="country">Country</label>
-                    <input type="text" id="country" name="country" 
-                        class="form-control"
-                        [ngClass]="{ 'error' : isBookInvalid('country')}" 
-                        formControlName="country" required>
-                </div>
-                <div class="form-group">
-                    <label for="imageLink">Image Link</label>
-                    <input type="text" id="imageLink" name="imageLink" 
-                        class="form-control"
-                        [ngClass]="{ 'error' : isBookInvalid('imageLink')}" 
-                        formControlName="imageLink" required>
-                </div>
-                <div class="form-group">
-                    <label for="language">Language</label>
-                    <input type="text" id="language" name="language" 
-                        class="form-control"
-                        [ngClass]="{ 'error' : isBookInvalid('language')}" 
-                        formControlName="language" required>
-                </div>
-                <div class="form-group">
-                    <label for="link">Link</label>
-                    <input type="text" id="link" name="link" 
-                        class="form-control"
-                        [ngClass]="{ 'error' : isBookInvalid('link')}" 
-                        formControlName="link" required>
-                </div>
-                <div class="form-group">
-                    <label for="pages">Pages</label>
-                    <input type="number" id="pages" name="pages" 
-                        class="form-control"
-                        [ngClass]="{ 'error' : isBookInvalid('pages')}" 
-                        formControlName="pages" required>
-                </div>
-                <div class="form-group">
-                    <label for="year">Year</label>
-                    <input type="number" id="year" name="year" 
-                        class="form-control"
-                        [ngClass]="{ 'error' : isBookInvalid('year')}" 
-                        formControlName="year" required>
-                </div>
-                <span *ngIf="isBookIncomplete()" class="error">You must complete all fields</span>
-                <button *ngIf="!isBookIncomplete()" type="submit" class="btn btn-primary">Add book</button>
-            </form> 
-        </div>
+            <div class="modal-header">
+                <h5 class="modal-title" id="addBookModalLabel">Add new book</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="addBookForm" (ngSubmit)="onBookAddSubmit()">
+                    <div class="form-group">
+                        <label for="title">Title</label>
+                        <input type="text" id="title" name="title" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('title')}" 
+                            formControlName="title" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="author">Author</label>
+                        <input type="text" id="author" name="author" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('author')}" 
+                            formControlName="author" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="country">Country</label>
+                        <input type="text" id="country" name="country" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('country')}" 
+                            formControlName="country" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="imageLink">Image Link</label>
+                        <input type="text" id="imageLink" name="imageLink" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('imageLink')}" 
+                            formControlName="imageLink" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="language">Language</label>
+                        <input type="text" id="language" name="language" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('language')}" 
+                            formControlName="language" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="link">Link</label>
+                        <input type="text" id="link" name="link" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('link')}" 
+                            formControlName="link" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="pages">Pages</label>
+                        <input type="number" id="pages" name="pages" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('pages')}" 
+                            formControlName="pages" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="year">Year</label>
+                        <input type="number" id="year" name="year" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('year')}" 
+                            formControlName="year" required>
+                    </div>
+                    <span *ngIf="isBookIncomplete()" class="error">You must complete all fields</span>
+                    <button *ngIf="!isBookIncomplete()" type="submit" class="btn btn-primary">Add book</button>
+                </form> 
+            </div>
         </div>
     </div>
-    </div>
+</div>
