--- a/AwesomeBooks/src/app/nav.component.html
+++ b/AwesomeBooks/src/app/nav.component.html
@@ -1,7 +1,5 @@
-<div class="navbar navbar-expand-sm
-            navbar-dark fixed-top">
-            
-    <!-- <span class="navbar-brand">Awesome Books</span> -->
+<div class="navbar navbar-expand-sm navbar-dark fixed-top">
+    
     <img [src]="imagePath" height="40" style="padding: 0 10px;" />
     <ul class="navbar-nav">
         <li class="nav-item">
