--- a/AwesomeBooks/src/app/review.component.css
+++ b/AwesomeBooks/src/app/review.component.css
@@ -1,3 +1,9 @@
 .error {
   background-color: #ff8a8a;
 }
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
