--- a/AwesomeBooks/src/app/book.component.html
+++ b/AwesomeBooks/src/app/book.component.html
@@ -30,15 +30,12 @@
                         </ng-container>
 
                     </div>
-                    <div class="card-body">
-                        <img src="https://raw.githubusercontent.com/benoitvallon/100-best-books/master/static/{{book.imageLink}}" height="200"/>
+                    <div class="card-body" style="display: flex; justify-content: center;">
+                        <img src={{book.imageLink}} height="200"/>
                     </div>
-                    <!-- <div class="card-footer">
-                        <p>{{noOfReviews}}</p>
-                    </div> -->
                 </div>
             </div>
-        </div>  <!-- col -->
+        </div>
 
         <div class="col-md">
             <div class="row">
@@ -62,7 +59,7 @@
                 <div class="row" *ngFor="let review of reviews | async">
                     <div class="card bg-light mb-3"
                     [routerLink]="['/books', book._id, 'reviews', review._id]"
-                    style="width: 40rem; margin: auto; padding: 0;">
+                    style="width: 40rem; margin: auto; padding: 0; cursor: pointer;">
                         <div class="card-header bg-secondary text-white">
                             Review by 
                             {{review.name}}
@@ -82,79 +79,79 @@
 
 <!-- Edit Book Modal -->
 <div class="modal fade" id="editBookModal" tabindex="-1" role="dialog" aria-labelledby="editBookModalLabel" aria-hidden="true">
-<div class="modal-dialog" role="document">
-    <div class="modal-content">
-    <div class="modal-header">
-        <h5 class="modal-title" id="editBookModalLabel">Edit book</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="modal-body">
-        <form [formGroup]="editBookForm" (ngSubmit)="onBookEditSubmit()">
-            <div class="form-group">
-                <label for="title">Title</label>
-                <input type="text" id="title" name="title" 
-                    class="form-control"
-                    [ngClass]="{ 'error' : isBookInvalid('title')}" 
-                    formControlName="title" required>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editBookModalLabel">Edit book</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-            <div class="form-group">
-                <label for="author">Author</label>
-                <input type="text" id="author" name="author" 
-                    class="form-control"
-                    [ngClass]="{ 'error' : isBookInvalid('author')}" 
-                    formControlName="author" required>
-            </div>
-             <div class="form-group">
-                <label for="country">Country</label>
-                <input type="text" id="country" name="country" 
-                    class="form-control"
-                    [ngClass]="{ 'error' : isBookInvalid('country')}" 
-                    formControlName="country" required>
-            </div>
-            <div class="form-group">
-                <label for="imageLink">Image Link</label>
-                <input type="text" id="imageLink" name="imageLink" 
-                    class="form-control"
-                    [ngClass]="{ 'error' : isBookInvalid('imageLink')}" 
-                    formControlName="imageLink" required>
-            </div>
-            <div class="form-group">
-                <label for="language">Language</label>
-                <input type="text" id="language" name="language" 
-                    class="form-control"
-                    [ngClass]="{ 'error' : isBookInvalid('language')}" 
-                    formControlName="language" required>
-            </div>
-            <div class="form-group">
-                <label for="link">Link</label>
-                <input type="text" id="link" name="link" 
-                    class="form-control"
-                    [ngClass]="{ 'error' : isBookInvalid('link')}" 
-                    formControlName="link" required>
-            </div>
-            <div class="form-group">
-                <label for="pages">Pages</label>
-                <input type="number" id="pages" name="pages" 
-                    class="form-control"
-                    [ngClass]="{ 'error' : isBookInvalid('pages')}" 
-                    formControlName="pages" required>
-            </div>
-            <div class="form-group">
-                <label for="year">Year</label>
-                <input type="number" id="year" name="year" 
-                    class="form-control"
-                    [ngClass]="{ 'error' : isBookInvalid('year')}" 
-                    formControlName="year" required>
-            </div>
+            <div class="modal-body">
+                <form [formGroup]="editBookForm" (ngSubmit)="onBookEditSubmit()">
+                    <div class="form-group">
+                        <label for="title">Title</label>
+                        <input type="text" id="title" name="title" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('title')}" 
+                            formControlName="title" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="author">Author</label>
+                        <input type="text" id="author" name="author" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('author')}" 
+                            formControlName="author" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="country">Country</label>
+                        <input type="text" id="country" name="country" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('country')}" 
+                            formControlName="country" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="imageLink">Image Link</label>
+                        <input type="text" id="imageLink" name="imageLink" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('imageLink')}" 
+                            formControlName="imageLink" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="language">Language</label>
+                        <input type="text" id="language" name="language" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('language')}" 
+                            formControlName="language" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="link">Link</label>
+                        <input type="text" id="link" name="link" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('link')}" 
+                            formControlName="link" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="pages">Pages</label>
+                        <input type="number" id="pages" name="pages" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('pages')}" 
+                            formControlName="pages" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="year">Year</label>
+                        <input type="number" id="year" name="year" 
+                            class="form-control"
+                            [ngClass]="{ 'error' : isBookInvalid('year')}" 
+                            formControlName="year" required>
+                    </div>
 
-            <span *ngIf="isBookIncomplete()" class="error">You must complete all fields</span>
-            <button *ngIf="!isBookIncomplete()" type="submit" class="btn btn-primary">Save changes</button>
-        </form>
+                    <span *ngIf="isBookIncomplete()" class="error">You must complete all fields</span>
+                    <button *ngIf="!isBookIncomplete()" type="submit" class="btn btn-primary">Save changes</button>
+                </form>
+            </div>
+        </div>
     </div>
-    </div>
-</div>
 </div>
 
 <!-- Add review Modal -->
