--- a/AwesomeBooks/src/app/review.component.html
+++ b/AwesomeBooks/src/app/review.component.html
@@ -6,15 +6,13 @@
                 <div class="card bg-light mb-3"
                 style="width: 40rem; margin: auto;">
                     <div class="card-header bg-secondary text-white">
-                        Review by 
-                        {{review.name}}
-                    </div>
-                    <div class="card-body">
-                        <p class="comment">{{review.comment}}</p>
+                        <div>
+                            Review by {{review.name}}
+                        </div>
                         <ng-container
                             *ngIf="authService.isAuthenticated$ | async;">
                             <div *ngIf="authService.user$ | async as user">
-                                <button class="btn btn-secondary edit-button" data-toggle="modal" data-target="#editReviewModal">
+                                <button class="btn btn-light edit-button" data-toggle="modal" data-target="#editReviewModal">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
                                         <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
                                     </svg>
@@ -30,6 +28,9 @@
                                 </button>
                             </div>
                         </ng-container>
+                    </div>
+                    <div class="card-body">
+                        <p class="comment">{{review.comment}}</p>
                     </div>
                     <div class="card-footer">
                         <strong>Rating:</strong> {{review.stars}} stars
